@@ -256,8 +256,6 @@
 #
 # ipmi-fru-verbose-count 0
 #
-# ipmi-fru-skip-checks DISABLE
-#
 # ipmi-fru-bridge-fru DISABLE
 #
 # ipmi-fru-interpret-oem-data DISABLE
