@@ -39,6 +39,7 @@ enum ipmi_sel_argp_option_keys
   {
     DEVICE_ID_KEY = 'e',
     VERBOSE_KEY = 'v',
+    /* legacy */
     SKIP_CHECKS_KEY = 's',
     BRIDGE_FRU_KEY = 160,
     INTERPRET_OEM_DATA = 161,
@@ -50,6 +51,7 @@ struct ipmi_fru_arguments
   uint8_t device_id;
   int device_id_set;
   int verbose_count;
+  /* legacy */
   int skip_checks;
   int bridge_fru;
   int interpret_oem_data;
